# duckdb_aggjoin

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md
benchmarks/: README.md  bench.sql  bench_asymmetric.sql  bench_asymmetric_mixed.sql  bench_build_side_mixed.sql  bench_build_side_nonnumeric.sql  bench_build_side_path.sql  bench_build_side_suite.sql  bench_composite_asymmetric_mixed.sql  bench_composite_asymmetric_probe_nonnumeric_mixed.sql  bench_composite_asymmetric_probe_varchar_richer_mixed.sql  bench_composite_asymmetric_richer_mixed.sql  bench_composite_build_subset.sql  bench_composite_keys.sql  bench_composite_probe_build_mixed.sql  bench_composite_probe_nonnumeric_mixed.sql  bench_composite_subset_probe_build_mixed.sql  bench_core_direct_100k.sql  bench_core_direct_100k_aggjoin.sql  bench_core_direct_100k_native.sql  bench_core_direct_1m.sql  bench_core_direct_1m_aggjoin.sql  bench_core_direct_1m_native.sql  bench_core_hash_3m.sql  bench_core_hash_3m_aggjoin.sql  bench_core_hash_3m_native.sql  bench_core_high_blowup.sql  bench_core_high_blowup_aggjoin.sql  bench_core_high_blowup_native.sql  bench_core_multiagg_1m.sql  bench_core_multiagg_1m_aggjoin.sql  bench_core_multiagg_1m_native.sql  bench_core_sparse.sql  bench_core_sparse_aggjoin.sql  bench_core_sparse_native.sql  bench_core_zipf_100k.sql  bench_core_zipf_100k_aggjoin.sql  bench_core_zipf_100k_native.sql  bench_correctness.sql  bench_cte_chain.sql  (+60 more)
scripts/: build_wasm.sh  patch_metadata.py  prepare_dblp_parquet.sh  run_regression_smoke.sh  run_sqllogictests.sh
(+80 files in other folders)
